# guazi-seed

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  make.bat  make.sh
foobar/: CMakeLists.txt  export.txt  foobar.cpp  foobar.h
